[tool.poetry]
name = "raps"
version = "0.1.0"
description = "RAPS"
authors = ["PSF <cfer_product-services-team@amplify.com>"]

[tool.poetry.dependencies]
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
